--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <section>
+  <section class="main">
     {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
     {%- endif -%}
@@ -12,8 +12,8 @@ layout: default
   </section>
 
 
-  <section>
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+  <section class="posts">
+    <h2 class="post-list-heading">Posts</h2>
     
     {%- if site.posts.size > 0 -%}
     <ul class="post-list">
@@ -26,6 +26,23 @@ layout: default
       {%- endfor -%}
     </ul>
     {%- endif -%}
+  </section>
+
+  <section class="adrs">
+    <h2 class="post-list-heading">ADRs</h2>
+    
+    {%- if site.adrs.size > 0 -%}
+    <ul class="post-list">
+      {%- for adr in site.adrs -%}
+      <li>
+        <a class="post-link" href="{{ adr.url | relative_url }}">
+          {{ adr.title | escape }}
+        </a>
+      </li>
+      {%- endfor -%}
+    </ul>
+    {%- endif -%}
+
   </section>
 
 </div>
